fix: reset min width of file item to enable wrapping of its file name (refs FRI-850)

--- a/packages/design/src/components/file-item/_file-item.scss
+++ b/packages/design/src/components/file-item/_file-item.scss
@@ -62,6 +62,7 @@ $FILE_LIST_ITEM_SELECTOR: ".file-item-list" !default;
 
     &__file-name {
         margin-left: size.$margin-025;
+        min-width: 0;
         overflow-wrap: break-word;
         white-space: normal;
     }
